Fixed config loading error.